<resources>
    <string name="app_name">pc1_final</string>
    <string name="tituloPrincipal">Cálculo de Notas</string>
    <string name="textParcial">Examen Parcial</string>
    <string name="textFinal">Examen Final</string>
    <string name="textPEP">Promedio de Evaluacion Permanente (PEP)</string>
    <string name="textCalcular">Calcular</string>
    <string name="textResult">RESULTADOS</string>
    <string name="TEXT">La nota final es</string>
</resources>